--- a/public/index.html
+++ b/public/index.html
@@ -31,11 +31,16 @@
             padding: 8px;
             padding-left: 20px;
             padding-right: 10px;
+            padding-bottom: 17px;
         }
 
         .chat-input {
             margin-bottom: 60px;
             border-top: none;
+        }
+
+        .chat-input-box {
+            padding-left: 20px;
         }
 
         .chat-header {
@@ -67,6 +72,28 @@
             clear: both;
         }
 
+        .message-item {
+            max-width: 90%
+        }
+
+        .user-typing {
+            position: absolute;
+            width: 100%;
+            bottom: 38px;
+            padding-left: 21px;
+            padding-bottom: 4px;
+            font-size: small;
+            display: none;
+        }
+
+        .list-group-item {
+            text-decoration: none !important;
+        }
+
+        .list-group-item small {
+            margin-left: 18px;
+        }
+
         /* width */
         ::-webkit-scrollbar {
             width: 10px;
@@ -91,7 +118,11 @@
             cursor: pointer;
         }
 
-        .chat-input-box {}
+        @media only screen and (max-width: 600px) {
+            .main-container {
+                width: 90vw !important
+            }
+        }
     </style>
     <script>
 
@@ -118,7 +149,7 @@
 
         function login(el) {
             event.preventDefault();
-
+            $('.login-err').empty();
             fd = new FormData(el);
 
             $.ajax({
@@ -144,6 +175,7 @@
                     }
                 },
                 error: function (err) {
+                    $('.login-err').text('Incorrect login').css('color', '#f00');
                     console.log(err)
                 }
             });
@@ -204,16 +236,17 @@
                 connection.socket = createSocket(socket_url, '/test', getToken());
 
                 connection.socket.on('userConnect', (data) => {
-                    // console.log(data)
+                    //console.log(data)
                     senderId = getUserData('id');
                     // userSocketId = data.socket_id;
                     // console.log(userSocketId);
-
+                    renderUserStatus(data);
                     connection.socket.emit('userList', { userId: getUserData('id') });
                 });
 
                 connection.socket.on('userDisconnect', (data) => {
                     //console.log(data)
+                    renderUserStatus(data);
                     connection.socket.emit('userList', { userId: getUserData('id') });
                 });
 
@@ -228,7 +261,7 @@
                     renderChatList(data);
                 });
 
-                connection.socket.on('pong', (data) => {
+                connection.socket.on('pongTest', (data) => {
                     //console.log(data.message)
                     var template = `<div class="alert alert-success alert-dismissible">
                                             <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -240,12 +273,21 @@
                 connection.socket.on('userList', (data) => {
                     renderUser(data)
                 })
+
+                connection.socket.on('userTyping', (data) => {
+                    userTyping();
+                })
+
+                connection.socket.on('seenMessage', () => {
+                    // console.log('seen')
+                    seenAllMessages();
+                });
             }
         }, 1000);
 
-        function test() {
+        function testConnection() {
             if (connection.socket) {
-                connection.socket.emit('ping', {
+                connection.socket.emit('pingTest', {
                     message: 'Connected'
                 });
             }
@@ -263,6 +305,13 @@
             connection.socket.emit('get_user', {
                 message: 'Connected'
             });
+        }
+
+        function seenAllMessages() {
+            $('#chat-list').find('.is-seen').html('<i class="fa fa-eye" aria-hidden="true"></i>');
+            setTimeout(() => {
+                $('#chat-list').find('.is-seen').show('fade');
+            }, 500);
         }
 
         function renderUser(userList) {
@@ -289,7 +338,7 @@
                     // }
 
                     //console.log(data)
-                    return `<a href="#" class="list-group-item" > <i class="fa fa-circle ${(data.socket_id ? 'text-success' : 'text-danger')}"></i> ${data.email} 
+                    return `<a href="javascript:{}" class="list-group-item" > <i class="fa fa-circle ${(data.socket_id ? 'text-success' : 'text-danger')}"></i> ${data.email} 
                 ${chatBtn}
                 </a>`;
                 }
@@ -316,6 +365,8 @@
             receiverId = 0;
             $('#chat-box').hide();
             $('#user-list').show();
+            $('#chat-list').empty();
+
         }
 
         function scrollChatDown() {
@@ -324,21 +375,30 @@
         }
 
         function renderUserStatus(data) {
-            //console.log(data.socket_id);
-            var html = `<a href="#" class="list-group-item"> <span>${data.email}</span>
-                        <button type="button" onclick="closeChat()" class="btn btn-sm btn-danger float-right">Close</button>
-                        </a>`;
-            $('#chat-header').html(html);
 
+            if (receiverId == data.id) {
+                $('.last-seen').fadeOut();
+                let userPresense = `<i class="fa fa-circle ${(data.is_online == 'ONLINE' ? 'text-success' : 'text-danger')}"></i>`;
+
+                var html = `<a href="javascript:{}" class="list-group-item"> ${userPresense} <span>${data.email}</span>
+            <button type="button" onclick="closeChat()" class="btn btn-sm btn-danger float-right">Close</button>
+            <br/>
+            <small class="last-seen" style="display:none">${data.last_seen != null ? (data.is_online == 'ONLINE' ? 'Online' : 'Last seen ' + data.last_seen) : ''}</small>
+            </a>`;
+                $('#chat-header').html(html);
+                $('.last-seen').fadeIn();
+            }
         }
 
         function receiveMessage(data) {
+            userTypingHide();
             if (receiverId == data.senderId) {
-                var elMsg = `<div class="chat-msg-receiver">${data.message}<br/><small>${data.date_created}</small></div>`;
+                var elMsg = `<div class="chat-msg-receiver message-item">${data.message}<br/><small>${data.date_created}</small></div>`;
                 $('#chat-list').append(elMsg);
                 connection.socket.emit('seenMessage', { senderId: data.senderId, receiverId: data.receiverId });
                 scrollChatDown();
             }
+
         }
 
         function pad(s) { return (s < 10) ? '0' + s : s; }
@@ -357,7 +417,7 @@
             var message = $el.find('.chat-input-box').val();
             if (message) {
                 $el.find('.chat-input-box').val('');
-                var elMsg = `<div class="chat-msg-sender">${message}<br/><small>${date_created}</small></div>`;
+                var elMsg = `<div class="chat-msg-sender message-item"><small class="is-seen float-right"></small>${message}<br/><small>${date_created}</small></div>`;
                 $('#chat-list').append(elMsg);
                 scrollChatDown();
                 // console.log(senderId, receiverId, message, toSocket);
@@ -368,12 +428,12 @@
 
         function renderChatList(chatList) {
             var chatEl = chatList.map((data) => {
-                //console.log(data)
+                // console.log(data)
                 if (data.senderId == senderId) {
-                    return `<div class="chat-msg-sender">${data.message}<br/><small>${data.date_created}</small></div>`;
+                    return `<div class="chat-msg-sender message-item"><small class="is-seen float-right">${data.is_seen ? '<i class="fa fa-eye" aria-hidden="true"></i>' : ''}</small>${data.message}<br/><small>${data.date_created}</small></div>`;
                 }
                 else {
-                    return `<div class="chat-msg-receiver">${data.message}<br/><small>${data.date_created}</small></div>`;
+                    return `<div class="chat-msg-receiver message-item">${data.message}<br/><small>${data.date_created}</small></div>`;
                 }
             });
             $('#chat-list').html(chatEl);
@@ -388,6 +448,31 @@
             }
         }
 
+        typingStatus = true;
+        function userTyping() {
+            $('.user-typing').fadeIn();
+
+            if (typingStatus) {
+                typingStatus = false;
+                setTimeout(() => {
+                    $('.user-typing').fadeOut();
+                    typingStatus = true;
+                }, 5000);
+            }
+
+        }
+
+        function userTypingHide() {
+            $('.user-typing').hide();
+        }
+
+        $(document).ready(() => {
+            $('#chat-input').on('keyup', (e) => {
+                if (e.target.value != '') {
+                    connection.socket.emit('userTyping', { receiverId: receiverId });
+                }
+            })
+        });
 
     </script>
 
@@ -397,10 +482,10 @@
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link active" href="#">Live Chat</a>
+                <a class="nav-link active" href="">Live Chat</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="javascript:{}" onclick="test()">Test Connection</a>
+                <a class="nav-link" href="javascript:{}" onclick="testConnection()">Test Connection</a>
             </li>
             <li class="nav-item" id="user-name" style="display:none">
                 <a class="nav-link" href="javascript:{}"></a>
@@ -414,7 +499,7 @@
     </nav>
 
     <div class="d-flex justify-content-center">
-        <div class="mt-5" style="width:50vw">
+        <div class="mt-5 main-container" style="width:50vw">
 
             <div id="msg" style="height:70px"></div>
             <div class="list-group" id="user-list"></div>
@@ -431,17 +516,19 @@
                         <input type="password" class="form-control" placeholder="Enter password" id="pwd"
                             name="password">
                     </div>
-
+                    <div class="login-err float-right"></div>
                     <button type="submit" class="btn btn-success">Login</button>
                 </form>
             </div>
             <br />
 
-            <div id="chat-box" style="display:none">
+            <div id="chat-box" style="display:none;position:relative">
                 <div class="chat-header" id="chat-header"></div>
                 <div class="chat-box">
                     <div class="chat-list" id="chat-list"></div>
+
                 </div>
+                <div class="user-typing">Typing...</div>
                 <div class="chat-input">
                     <div class="input-group mb-3">
                         <input onkeydown="press(event)" id="chat-input" type="text"
